2009-09-20  Christopher Bratusek <zanghar@freenet.de>
	* themes/Crux/theme.jl: make default text-color of inactive frames black
	                          for better readability

	* configure.in: post-release version bump to 1.5.3 ("24 hours a day - 12 months a year")

2009-09-15  Christopher Bratusek <zanghar@freenet.de>
	* scripts/Makefile.in: also expand REP_ENVIRON here [Luis Rodrigo Gallardo Cruz]

	* man/Makefile.in: actually build FAQ
	                   removed sawfish.dvi target
			   removed sawfish.ps target
			   removed man target

2009-09-14  Christopher Bratusek <zanghar@freenet.de>
	* man/news.texi: 1.5.0 section rewritten [Teika Kazura]

	* configure.in: bump minimum rep-gtk to 0.90.0

	* lisp/sawfish/gtk/color-preview.jl
	* lisp/sawfish/gtk/widgets/color.jl: removed GtkButton + GtkPreview + GtkColorSelection by GtkColorButton
	                                     makes 1.5s sawfish-ui compatible with rep-gtk 0.90.0

	* man/news.texi: updated

2009-09-05  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: bump version to 1.5.2 ("Save The Robots")

	* sawfish.spec.in: improved [Kim B. Heino]

2009-07-28  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: bump version to 1.5.1 ("Great")
	                small fixup in x11r7 checks regarding SMlib and libICE
	                non-bash compatibility
	
	* lisp/sawfish/wm/tabs/tab.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl
	* lisp/sawfish/wm/util/marks.jl: fixed license header	
	
	* po/Makefile.in: renamed realclean rule to distclean rule
	
	* lisp/sawfish/wm/placement/stagger.jl: fix group of stagger option
	
	* sawfish.desktop
	* sawfish-wm.dektop: fixed a typo, removed unneeded entries
	
	* lisp/sawfish/wm/ext/infinite-desktop.jl: fixed cursor warping [Jeremy Hankins]
	
	* lisp/sawfish/gtk/widget.jl: connect spinbuttons to value-changed signal (allows typing in the value manually)
	
	* src/Makefile.in: add --tag=CC there necessary on some systems [Gentoo]